[package]
name = "rust-agent-simulation-engine"
version = "0.1.0"
authors = ["Liana Pigeot <32243840+nialna@users.noreply.github.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
uuid = { version = "0.8", features = ["v4"] }