[package]
name = "simulation"
version = "0.1.0"
authors = ["Liana Pigeot <32243840+nialna@users.noreply.github.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
uuid = { version = "0.8", features = ["v4"] }
cgmath = "0.18.0"
rand = "0.8.3"
futures-timer = "3.0.2"